<resources>
    <string name="app_name">Stats</string>
    <string name="title">Stats</string>
    <string name="pace_input">Enter a pace (minutes/km)</string>
    <string name="pace_submit">Calculate from pace</string>
    <string name="speed_input">Enter a speed (km/h)</string>
    <string name="speed_submit">Calculate from speed</string>
    <string name="distance_input">Enter a distance (km)</string>
    <string name="distance_submit">Calculate time for distance</string>
    <string name="goal_input">Enter a distance for goal time (km)</string>
    <string name="time_input">Enter a time (minutes)</string>
    <string name="goal_submit">Calculate pace and speed for distance and time</string>
    <string name="result">Result</string>
</resources>